--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>article-service</artifactId>
+    <artifactId>reservation-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>article-service</name>
-    <description>article-service</description>
+    <name>reservation-service</name>
+    <description>reservation-service</description>
 
     <properties>
         <java.version>17</java.version>
